# vibex-workbench

./: .gitignore  CHANGELOG.md  HEARTBEAT.md  MVP-CAPABILITY-GAPS.md  Makefile  README.md  SPEC-EXECUTION-PROTOCOL.md  SPEC-LANDING-GAPS.md  SPEC-TO-SHIP-WORKFLOW.md  VISION-TRACEABILITY-ROLLOUT.md  WORKBENCH_UI_DIRECTION.md  go.mod  go.sum  main.go  spec-designer-evolution-card.html  wails.json
.memlace/: config.json
agent/: .env  .env.example  .gitignore  AGENTS.md  README.md  go.mod  models.json  models.yaml
backend/: go.mod  main.go  sse_server.py
clarification/: clarification_agent_architecture.md
docs/: prototype-vs-implementation.md  spec-execution-protocol.md  spec-goal-decomposition-traceability.md
frontend/: .env.example  .gitignore  package-lock.json  package.json  package.json.md5  playwright.config.ts  playwright.dev.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: generate.py  icon.icns
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs
generators/: add_acceptance_criteria.py  bootstrap_smoke.py  drift_check.py  gen.py  mvp_acceptance_gate.py  scaffold_generator.py  scaffolder.py  spec_code_validator.py  spec_criteria_validator.py  spec_self_corrector.py  state_detector.py  validate_specs.py  vibex_criteria_engine.py
memory/: 2026-04-29.md
prototypes/: canvas-workbench-prototype.html  routing-panel-prototype.html  (+5 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+652 files in other folders)
